fixed chmod 5 push

--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,11 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie"
+    },
+    "builds": [
+    {
+      "src": "vercel-build.js",
+      "use": "@vercel/node"
     }
+  ]
 }
