--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "postinstall": "php artisan config:clear"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
